array.island.Island.scala.error
Compilation error:
Island:8: error: value :: is not a member of Int
    listeNulle = listeNulle :: 0
                            ^Island:18: error: not found: value in
        for (j in range <- i to k-1) {
               ^Island:18: error: not found: value in
        for (j in range <- i to k-1) {
               ^