array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbNiveaux=0
  var max = num.max
  var k = 0
  var listeNulle: List[Int] = Nil
  for (i <- 1 to num.size) {
    listeNulle = listeNulle :: 0
  }
  while(num != listeNulle) {
    for (i <- 1 to num.size) {
    	if (num(i) == max) {
        k=1
      	while(num(i)==num(i+k)) {
          k=k+1
        }
        nbNiveaux=nbNiveaux+1
        for (j in range <- i to k-1) {
          num(j)=num(j)-1
        }
    	}
  	}
    max=max-1
  }
  return nbNiveaux
}